Task 1.1 Changes with Bonus Answers

--- a/InterviewTest.DriverData.Console/App.config
+++ b/InterviewTest.DriverData.Console/App.config
@@ -1,6 +1,27 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <appSettings>
+    <add key="AnalysisType" value="deliverydriver" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+ <!-- Begin Delivery Driver Settings  StartTime and EndTime format should be HH:MM:SS -->        
+        <add key="StartTime" value="09:00:00" />
+        <add key="EndTime" value="17:00:00" />
+        <add key="MaxSpeed" value="30" />
+  <!-- End Delivery Driver Settings -->
+  </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
